2004-09-06  Dick Porter  <dick@ximian.com>

	* process.c (ves_icall_System_Diagnostics_Process_Start_internal):
	Close the new process's thread handle, as we don't use it.  The
	handle stays around forever otherwise.

2004-09-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* assembly.c: provide more information when loading an assembly fails.

2004-09-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* filewatcher.c: don't expect the development fam package to be
	installed.  If HAVE_KQUEUE return mode 3 to use the new kqueue
	watcher. Patch by Geoff Norton.

2004-09-02  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (mono_marshal_alloc): Return a valid pointer on size 0
	as well.

2004-08-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* gc.c: actually enable paolo's patch to make GC warnings
	use the trace api.

2004-08-23  Zoltan Varga  <vargaz@freemail.hu>
 
 	* metadata.c (mono_metadata_parse_type): Alloc pinned, byref and
 	custom modifiers to be in any order. Fixes #61990.

Thu Aug 5 17:11:44 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix to deal with object[] arrays in custom ctors
	(bug #62550).

Tue Aug 3 17:54:17 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* gc.c: make GC warning messages use the trace API, they are just
	noise to most of the users.

Tue Aug 3 16:40:17 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* gc.c, object.h: mono_gc_handle_*() interface and
	AddrOfPinnedObject fixes. GC handle support even without GC.

Fri Jul 30 16:49:05 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* object.c: always create an object if null is passed
	to Invoke() where a valuetype is expected.

2004-07-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* appdomain.c: hack to build correctly the private bin path on windows.
	Fixes bug #61991.

2004-07-28  Dick Porter  <dick@ximian.com>

	* socket-io.c
	(ves_icall_System_Net_Sockets_Socket_RecvFrom_internal): Check
	returned sockaddr size before creating the remote address object.